--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
-#header h1 {
-  text-align: center;
-}
 
-#header p {
+header {
   text-align: center;
 }
 
@@ -24,55 +21,25 @@ main {
   float: left;
 }
 
-.headphones_section {
+.rightcontainer {
   width: 100%;
   clear: both;
 }
 
-#headphones_picture {
+.rightpic {
   width: 40%;
   float: left;
-  margin: 20px 0px 0px 0px;
+  margin-top: 20px;
 }
 
-.headphones_section img {
+.rightcontainer img {
   width: 100%;
 }
 
-.laptop_section {
-  width: 100%;
-  clear: both;
-}
-
-#laptop_picture {
-  width: 40%;
-  float: left;
-  margin: 20px 0px 0px 0px;
-}
-
-.laptop_section img {
-  width: 100%;
-}
-
-.window_section {
-  width: 100%;
-  clear: both;
-}
-
-.window_section img {
-  width: 100%;
-}
-
-#window_picture {
-  width: 40%;
-  float: left;
-  margin: 20px 0px 0px 0px;
-}
-
-#text {
+.text {
   width: 50%;
   float: left;
-  margin: 0px 0px 0px 10px;
+  margin-left: 10px;
 }
 
 .clearfix:after {
